--- a/index.css
+++ b/index.css
@@ -13,15 +13,16 @@
 [data-list="Products-Tilte"] {
     color: var(--primary-color);
     font-size: 1.5rem;
+    margin-block-end: 40px;
    
 }
 img:hover {
     transform: scale(1.05); 
 }
-h3{
+[data-role="Product-details-container"] h5{
     color: var(--primary-color);  
 }
-h3:hover ,h1{
+[data-role="Product-details-container"] h5:hover ,h1:hover{
     color: var(--secondary-color);
 cursor: pointer;}
 [data-list="Products-Tilte"]:hover {
@@ -30,7 +31,7 @@ cursor: pointer;}
 }
 
 [data-role="Product-description"] {
-    max-width: 750px;
+    max-width: 670px;
     text-align: start;
     line-height: 1.5em;
     opacity: 0; 
@@ -38,10 +39,11 @@ cursor: pointer;}
     animation-delay: 0.5s; 
 }
 
+
 .stars {
     color: #F4D03F;
 }
-[data-role="card-container"], [data-role="thumbnail-container"] div img ,  [data-role="product-container"] img{
+[data-role="card-container"], [data-role="thumbnail-container"] div img ,  [data-role="product-container"] img,.card{
    
         box-shadow: 0px 0px 8px 4px #e9e9e9;
  
@@ -190,6 +192,7 @@ button:focus {
     text-decoration: none;
     color: var(--primary-color);
     font-size: 18px;
+    margin: 0px 10px;
     transition: color 0.3s; 
 }
 
@@ -206,15 +209,12 @@ div[data-list="ProductsData"] {
 }
 
 div[data-list="ProductsData"] > div {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    border: 1px solid #ccc;
+  min-height: 200px;
+ min-width: 350px;
     padding: 10px;
     border-radius: 5px;
-    width: 350px;
-    height: max-content;
-    min-height: 150px;
+    margin: 4px;
+ 
 }
 
 .fas .fa-star::before {
@@ -312,7 +312,8 @@ div:last-child {
 @media (min-width: 1201px) {
     .image-text-container {
      
-        height: 100vh;
+        min-height: 100vh; 
+        margin-bottom: 20px;
     }}
 @media (min-width: 901px) {
   
@@ -337,7 +338,11 @@ div:last-child {
         margin: auto;
        
     }
-
+    [data-list="Products-Tilte"] {
+      
+        margin-block-start: 40px;
+       
+    }
     .image-text-container {
         display: flex;
         flex-wrap: wrap;
